# mega-rs

./: .gitignore  Cargo.toml  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: Build.yml  Doc.yml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
mega/: Cargo.toml  all.html  enum.Command.html  enum.DecodeAttributesError.html  enum.Error.html  enum.FetchNodesNodeKind.html  enum.FileKeyParseError.html  enum.FileOrFolderKey.html  enum.FolderKeyParseError.html  enum.ParseMegaUrlError.html  enum.ParsedMegaUrl.html  enum.Response.html  enum.ResponseData.html  index.html  sidebar-items.js  struct.Client.html  struct.EasyClient.html  struct.EasyFileDownloadReader.html  struct.EasyGetAttributesBuilder.html  struct.ErrorCode.html  struct.FetchNodesResponse.html  struct.FileAttributes.html  struct.FileKey.html  struct.FileValidationError.html  struct.FileValidator.html  struct.FolderKey.html  struct.GetAttributesResponse.html  struct.ParsedMegaFileUrl.html  struct.ParsedMegaFolderUrl.html  struct.Url.html
mega-cli/: Cargo.toml
mega-cli/src/: commands.rs  main.rs
mega-cli/src/commands/: generate_completions.rs  get.rs  ls.rs  verify_file.rs
mega-py/: .gitignore  Cargo.toml  pyproject.toml
mega-py/mega_py/: __init__.py  mega_py.pyi
mega-py/src/: lib.rs  model.rs
mega-py/src/model/: node_kind.rs
mega/client/: struct.Client.html
mega/easy/: struct.Client.html  struct.GetAttributesBuilder.html
mega/easy/reader/: struct.FileDownloadReader.html
mega/file_validator/: struct.FileValidationError.html  struct.FileValidator.html
mega/parsed_mega_url/: enum.ParseMegaUrlError.html  enum.ParsedMegaUrl.html  struct.ParsedMegaFileUrl.html  struct.ParsedMegaFolderUrl.html
mega/references/: Using the Mega API, with Python examples! _ Julien Marchand • Dev blog.mhtml  download_verify.py
mega/src/: client.rs  easy.rs  file_validator.rs  lib.rs  parsed_mega_url.rs  types.rs
mega/src/easy/: reader.rs  util.rs
mega/src/types/: command.rs  error_code.rs  file_key.rs  file_or_folder_key.rs  folder_key.rs  response.rs
mega/types/command/: enum.Command.html
mega/types/error_code/: struct.ErrorCode.html
mega/types/file_key/: enum.ParseError.html  struct.FileKey.html
mega/types/file_or_folder_key/: enum.FileOrFolderKey.html
mega/types/folder_key/: enum.ParseError.html  struct.FolderKey.html
mega/types/response/: enum.DecodeAttributesError.html  enum.FetchNodesNodeKind.html  enum.Response.html  enum.ResponseData.html  struct.FetchNodes.html  struct.FileAttributes.html  struct.GetAttributes.html
mega_cli/: all.html  enum.Subcommand.html  fn.async_main.html  fn.main.html  index.html  sidebar-items.js  struct.Options.html
mega_cli/commands/: index.html  sidebar-items.js
mega_cli/commands/generate_completions/: fn.exec.html  index.html  struct.Options.html
mega_cli/commands/get/: enum.DownloadType.html  fn.download_file.html  fn.download_folder.html  fn.exec.html  fn.parse_input_arg.html  fn.path_ends_with_sep.html  index.html  sidebar-items.js  struct.DownloadFileArgs.html  struct.DownloadFolderArgs.html  struct.DownloadFolderArgsChild.html  struct.Options.html
mega_cli/commands/ls/: enum.OutputFormat.html  fn.exec.html  index.html  sidebar-items.js  struct.Entry.html  struct.Options.html
mega_py/: all.html  enum.NodeKind.html  index.html  sidebar-items.js  struct.Client.html  struct.File.html  struct.FileDownload.html  struct.FolderEntry.html  struct.Node.html
references/: get_chunks.py
search.desc/mega/: mega-desc-0-.js
search.desc/mega_cli/: mega_cli-desc-0-.js
search.desc/mega_py/: mega_py-desc-0-.js
search.index/: 02860c86be72.js  0533e22e1f3a.js  083a18d22cd7.js  0886e735c64c.js  089c1f11c301.js  08c1c4962d8d.js  09b85b92cf92.js  09c097c6acee.js  0a682922be0c.js  0b351b067024.js  0c44a60aacfa.js  0ce9fedf48ed.js  0d433be01b59.js  0dad297d573a.js  0e007bd62021.js  0ea81f4822fa.js  0f08dde53102.js  0f6272278578.js  10a86f585b4b.js  11df311aab84.js  11fca41aedc7.js  1305fddd9c30.js  135d9f5b6dfe.js  13abf3405d0f.js  13ea1c7d6834.js  14d50a58730e.js  14dc3038ce94.js  15b233a17582.js  15bb74d61aab.js  17b7111cca6b.js  18d928a583ef.js  191481d9acbe.js  19668b310d0f.js  19f0a4307511.js  1a4715aff23e.js  1a714c38a226.js  1b270425cc5a.js  1b39ea30915c.js  1c052cb2326b.js  1c0edc03a121.js  (+198 more)
search.index/crateNames/: 8de11ba52aa1.js
search.index/desc/: 2901b2d30492.js  9618a7fa1ef7.js
search.index/entry/: 15f64069a425.js  2cec6fc0a43f.js  d84a309c2c68.js  dce2d5c115bf.js
search.index/function/: 0f758ba72090.js  46424d569b23.js  4745e06a5a86.js  7c8e16d78fa0.js
search.index/generic_inverted_index/: 31a4efdac270.js  539bda8f0927.js  7e3cc8175277.js  afe666439a29.js
search.index/name/: 7413e5a01cf1.js  8be718698a3d.js  ddf2f0b0f7b1.js  eea719bc41c7.js
search.index/normalizedName/: 2ed62c8a9a8d.js  3844f7655329.js  bb47eccf932f.js  e726dae6f7b9.js
search.index/path/: 6f1c13ab7b43.js  b3b63ecc487d.js  e75390ccb1f4.js
search.index/type/: 4d60e7f3b21d.js  a6f54cb4598d.js  c21dbffe225f.js  d1f9cb8b25a5.js
src/: client.rs  easy.rs  lib.rs  types.rs
src/easy/: reader.rs
src/mega/: client.rs.html  easy.rs.html  file_validator.rs.html  lib.rs.html  parsed_mega_url.rs.html  types.rs.html
src/mega_cli/: commands.rs.html  main.rs.html
src/mega_py/: lib.rs.html  model.rs.html
src/types/: command.rs  file_key.rs  folder_key.rs  response.rs
trait.impl/argh/: trait.FromArgs.js  trait.SubCommand.js  trait.SubCommands.js  trait.TopLevelCommand.js
(+61 files in other folders)
