[package]
name = "mega"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
aes = "0.8.2"
base64 = "0.13.1"
block-padding = "0.3.2"
cbc = "0.1.2"
reqwest = { version = "0.11.13", features = [ "json" ] }
serde = { version = "1.0.147", features = [ "derive" ] }
serde_json = "1.0.89"
serde_repr = "0.1.9"
thiserror = "1.0.37"
url = { version = "2.3.1", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.22.0", features = [ "macros" ] }
