[package]
name = "mega"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
aes = "0.8.2"
base64 = "0.13.1"
block-padding = "0.3.2"
cbc = "0.1.2"
ctr = "0.9.2"
ecb = "0.1.1"
itoa = "1.0.5"
rand = { version = "0.8.5", features = [ "std", "std_rng" ],default-features = false } 
reqwest = { version = "0.11.16", features = [ "json" ] }
serde = { version = "1.0.152", features = [ "derive" ] }
serde_json = "1.0.93"
serde_repr = "0.1.10"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = [ "time" ] }
url = { version = "2.3.1", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.25.0", features = [ "macros", "fs" ] }

[features]
default = ["rustls-tls"]

native-tls = ["reqwest/native-tls"]

rustls-tls = ["reqwest/rustls-tls"]

easy = ["tokio/sync"]
