[package]
name = "mega-cli"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.61"
indicatif = { version = "0.18.3", features = [ "tokio" ] }
mega = { version = "0.0.0", path = "../mega", features = [ "easy" ], default-features = false }
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", version = "0.0.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [ "rt-multi-thread", "fs" ] }

[features]
default = [ "rustls-tls" ]
native-tls = [ "mega/native-tls" ]
rustls-tls = [ "mega/rustls-tls" ]
