[package]
name = "mega-py"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "mega_py"
crate-type = [ "cdylib" ]

[dependencies]
mega = { version = "0.0.0", path = "../mega", features = [ "rustls-tls", "easy" ], default-features=false }
pyo3 = "0.25.1"
pythonize = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = [ "rt", "rt-multi-thread" ] }
