[package]
name = "mega-py"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "mega_py"
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1.0.100"
mega = { version = "0.0.0", path = "../mega", features = [ "easy" ], default-features=false }
pyo3 = { version = "0.27.2", features = [ "extension-module", "abi3", "abi3-py310", "anyhow" ] }
pythonize = "0.27.0"
serde = { version = "1.0.228", features = [ "derive" ] }
tokio = { version = "1.49.0", features = [ "rt", "rt-multi-thread" ] }

[features]
default = [ "native-tls" ]
native-tls = [ "mega/native-tls" ]
rustls = [ "mega/rustls" ]