[package]
name = "mega"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
block-padding = "0.4.2"
cbc = "0.1.2"
ctr = "0.9.2"
ecb = "0.1.2"
itoa = "1.0.17"
pin-project-lite = "0.2.16"
rand = { version = "0.9.2", features = [ "std", "std_rng", "thread_rng" ], default-features = false }
reqwest = { version = "0.13.1", features = [ "http2", "json", "stream" ], default-features = false }
rustls = { version = "0.23.36", default-features = false, optional = true }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = [ "time" ] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["io"] }
url = { version = "2.5.8", features = [ "serde" ] }

[dev-dependencies]
tokio = { version = "1.49.0", features = [ "macros", "fs" ] }

[features]
default = [ "native-tls", "system-proxy" ]
native-tls = [ "reqwest/native-tls" ]
rustls = [ "reqwest/rustls" ]
rustls-ring = [ "reqwest/rustls-no-provider", "rustls/ring" ]
system-proxy = [ "reqwest/system-proxy" ]
easy = [ "tokio/sync" ]
